# Arbitrage-betting

./: .gitignore  .pre-commit-config.yaml  data.db  data.json  dev-requirements.txt  docker-compose.yaml  requirements.txt  setup.cfg  sqlite.db  tescik.py
engine/: engine.py
matcher/: .env.template  README.md  database.py  main.py  matcher.py  pyproject.toml  schemas.py
matcher/docker/: python.Dockerfile
matcher/src/: database.py  deps.py  enums.py  rabbit.py
matcher/src/data_access/: base.py
matcher/src/models/: base.py  football_match.py
matcher/src/schemas/: consumer_match.py
matcher/src/services/: name_standardization.py
matcher/src/services/matching/: data.py  matching.py
matcher/src/services/matching/strategy/batch/: base.py  bruteforce.py
matcher/src/services/matching/strategy/entity/: base.py  exact.py  levenshtein.py
matcher/src/services/resources/: club_names_synonyms.json
matcher/src/settings/: rabbit.py  settings.py
matcher/strategy/event/: base.py  naive.py
scrapers/: .env.template  .gitignore  README.md  main.py  pyproject.toml
scrapers/docker/: python.Dockerfile
scrapers/src/: enums.py  routes.py  settings.py
scrapers/src/schemas/: base.py
scrapers/src/services/: base.py  betclic.py  lvbet.py
scrapers/src/settings/: rabbit.py  scrapers.py
scrapers/src/utils/: rabbit.py  utils.py
src/: constants.py  database.py  enums.py  main.py  scheduler.py
src/engine/: engine.py  models.py
src/matcher/: matcher.py  schemas.py
src/matcher/strategy/: base.py  naive.py
src/matcher/strategy/entity/: base.py
src/matcher/strategy/event/: __init__.py  naive.py
src/scrapers/: base.py  betclic.py  lvbet.py
src/scrapers/schemas/: base.py
src/scrapers/utils/: utils.py
src/storage/: data_access.py  models.py
src/storage/data_access/: base.py  mongo.py  sqlite.py
