[tool.poetry]
name = "matcher"
version = "0.1.0"
description = ""
authors = ["ddymkowski <damiandymkowski96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
sqlalchemy = "^2.0.23"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
aio-pika = "^9.3.1"
pydantic = "1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
